tests/e2e/expression_is_nested.error
Error: syntax error in story at line 1, column 5

1|    a = 1 + 2 == 3/4 == 5*6 == 7%8 or false
          ^^^^^^^^^^^^^^^^^

E0124: Equality comparison not supported between `boolean` and `int`.
